2009-08-15  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (load-library): Doc fix.

2009-08-15  Michael Kifer  <kifer@cs.stonybrook.edu>

	* viper-cmd.el (viper-insert-isearch-string): new function.
	(viper-if-string): redefine C-s in the minibuffer to insert the last
	incremental search string.

	* ediff-init.el (ediff-coding-system): use escape-quoted in case of
	XEmacs.

	* ediff-merg.el (ediff-merge-region-is-non-clash-to-skip,
	ediff-merge-region-is-non-clash,
	ediff-skip-merge-region-if-changed-from-default-p): use defun.
	Also check if the job is really a merge job.

	* ediff.el (ediff-current-file): new function.

2009-08-15  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el: Edit docstrings throughout to follow Emacs
	conventions.
	(js-insert-and-indent): Function deleted.
	(js-mode-map): Don't bind keys to js-insert-and-indent.
	(js-beginning-of-defun): Rename from js--beginning-of-defun.
	(js-end-of-defun): Rename from js--end-of-defun.
	(js-auto-indent-flag): Variable deleted.

2009-08-14  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/js.el: Remove proclaim statement.  Defvar
	which-func-imenu-joiner-function to silence compiler.

	* files.el (auto-mode-alist): Use js-mode for .js files.

	* progmodes/js2-mode.el: File removed.

	* Makefile.in (ELCFILES): Add js.el, and remove js2-mode.el.

	* speedbar.el (speedbar-supported-extension-expressions): Add .js.

	* progmodes/hideshow.el (hs-special-modes-alist): Add js-mode
	entry.

2009-08-14  Daniel Colascione  <dan.colascione@gmail.com>

	* progmodes/js.el: New file.

2009-08-14  Mark A. Hershberger  <mah@everybody.org>

	* timezone.el (timezone-parse-date): Add ability to understand ISO
	basic format (minimal separators) dates in addition to the
	already-supported extended format dates.

2009-08-14  Eli Zaretskii  <eliz@gnu.org>

	* international/ucs-normalize.el: Add a `coding' file variable.

	* Makefile.in (ELCFILES): Add international/ucs-normalize.elc.
